# SnSupear

./: AIAssistant.cpp  AIAssistant.h  CMakeLists.txt  EditorUI.cpp  EditorUI.h  README.md  code_formatter.cpp  code_formatter.h  config_manager.cpp  config_manager.h  package-lock.json  package.json  syntax_highlighter.cpp  syntax_highlighter.h
public/: app.js  chatUI.js  index.html  style.css
src/: index.js  main.cpp
web/: app.js  index.html  styles.css
